# ros2-denis-v2

./: README.md
ball_tracker/: BALL_TRACKER.md  package.xml  setup.py
ball_tracker/ball_tracker/: ball_tracker_node.py
bringup/: CMakeLists.txt  package.xml
bringup/config/: bridge.yaml  controllers.yaml
bringup/launch/: launch_sim.launch.py  rsp.launch.py
bringup/models/orange_ball/: model.sdf
bringup/world/: gazebo_urban_station.sdf
description/: CMakeLists.txt  package.xml
description/launch/: display.launch.py
description/mashes/: lidar_base.stl
description/meshes/: head_base.stl
description/ros2_control/: ros2_control.xacro
description/rviz/: denis_config.rviz
description/urdf/: base.xacro  denis.urdf.xacro  gazebo_control.xacro  head.xacro  inertia.xacro  lidar.xacro  materials.xacro  properties.xacro
object_detection/: CMakeLists.txt  package.xml
object_detection/src/: face_detection.cpp
