<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ball_tracker</name>
  <version>0.0.0</version>
  <description>Orange ball tracker using head pan-tilt joints</description>
  <maintainer email="erdemzkn7@gmail.com">Erdem Ozkan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
